<resources>
    <string name="app_name">E-duca</string>
    <string name="txt_posted">Postada em</string>
    <string name="txt_postedAt">01/01/2023</string>
    <string name="title_class">Título da Aula</string>
    <string name="title_questions">Título da Pergunta</string>
    <string name="txt_ability">Habilidade 1</string>
    <string name="hint_navbar">O que você deseja estudar hoje?</string>
    <string name="title_sign_up">Cadastre-se</string>
    <string name="hint_name">Nome</string>
    <string name="hint_lastName">Sobrenome</string>
    <string name="hint_birthdate">dd-mm-aaaa</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar Senha</string>
    <string name="txt_link_sign_up">É professor?</string>
    <string name="txt_signUp">Fazer cadastro</string>
    <string name="link_sign_up">Faça seu cadastro aqui.</string>
    <string name="title_login">Faça seu login</string>
    <string name="txt_link_login">Ainda não tem uma conta?</string>
    <string name="txt_link">Realizar cadastro</string>
    <string name="txt_hello_username">Olá, Aluno(a)!</string>
    <string name="txt_salutation">Com dúvidas? Utilize o fórum para\nse comunicar com outros\nestudantes</string>
    <string name="txt_enter">Entrar</string>
    <string name="txt_confirm_sign">Finalizar cadastro</string>
    <string name="txt_back_login">Voltar ao login</string>
    <string name="txt_quiz_content">Realizar quiz</string>
    <string name="txt_quiz_finish">Finalizar quiz</string>
    <string name="txt_back">Voltar</string>
    <string name="txt_access_navigation">Acessar pelo navegador</string>
    <string name="txt_back_sign">Voltar ao cadastro</string>
    <string name="txt_add_answer">Adicionar resposta</string>
    <string name="txt_add">Adicionar</string>
    <string name="txt_confirm_delete">Sim, deletar</string>
    <string name="txt_update">Atualizar</string>
    <string name="txt_no">Não</string>
    <string name="txt_access_certificate">Acessar certificado</string>
    <string name="txt_download">Fazer download</string>
    <string name="txt_back_start">Voltar para o início</string>
    <string name="txt_question_title">Título da pergunta</string>
    <string name="txt_body_question">Início do corpo da pergunta…</string>
    <string name="txt_qty_answer">3 respostas</string>
    <string name="txt_date_question">Postado em 01/01/22 por </string>
    <string name="txt_question_name">Aluno(a)</string>
    <string name="txt_ops">Ops…</string>
    <string name="txt_restTextOps">Se você é professor, acesse nossa aplicação pelo navegador e aproveite nosso site!</string>
    <string name="txt_postfor">Postado por</string>
    <string name="txt_postIn">Postado em</string>
    <string name="txt_acess_cert">Acessar certificado</string>
    <string name="txt_nameteacher">Professor Carlos Roberto</string>
    <string name="txt_see_topics">Ver todos os \n tópicos</string>
    <string name="txt_add_new_topic">Adicionar novo \n tópico</string>
    <string name="txt_context">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis augue eu pellentesque. Nulla sit amet facilisis ante, sit amet interdum augue. Nullam viverra convallis lectus, maximus faucibus sem pretium sit amet. Aenean tempus aliquam fringilla.</string>
    <string name="txt_tks_avaliable1">Obrigado(a) por avaliar!</string>
    <string name="txt_tks_avaliable2">Estamos sempre trabalhando para garantir o melhor nos seus estudos</string>
    <string name="txt_title_likert">Gostou da aula?\nNos dê sua opinião!</string>
    <string name="txt_notlike">Não gostei</string>
    <string name="txt_improve">Poderia\nMelhorar</string>
    <string name="txt_doubt">Não sei</string>
    <string name="txt_liked">Gostei</string>
    <string name="txt_loved">Amei!</string>
    <string name="txt_title">Titulo:</string>
    <string name="txt_topicBody">Corpo do tópico:</string>
    <string name="txt_student">Aluno</string>
    <string name="txt_level">Nivel:</string>
    <string name="txt_home_page">Página Inicial</string>
    <string name="txt_doubt_forum">Fórum de dúvidas</string>
    <string name="txt_quiz"><b>Quiz: </b></string>
    <string name="txt_title_conteudo">Título do conteúdo</string>
    <string name="txt_the_is_sure">Tem certeza que deseja deletar esse tópico?</string>
    <string name="txt_all_info_deleted">Todas as respostas também serão deletadas.</string>
    <string name="txt_questionOne"><b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis augue eu pellentesque?</string>
    <string name="txt_questionTwo"><b>2.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis augue eu pellentesque?</string>
    <string name="txt_questionTree"><b>3.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis augue eu?</string>
    <string name="txt_questionFor"><b>4.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan ?</string>
    <string name="txt_questionFIve"><b>5.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis augue ?</string>
    <string name="txt_questionSix"><b>6.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan mattis?</string>
    <string name="txt_loading">Carregando…</string>
    <string name="txt_answer">Resposta</string>
    <string name="txt_category">Categoria 2</string>
    <string name="txt_body_answer">Corpo da resposta</string>
    <string name="txt_no_content_found_itle">nenhum conteúdo encontrado com este título</string>
    <string name="txt_btn_exit">Sair</string>
    <string name="saveAnswer">Salvar</string>
    <string name="txt_ty">Obrigado(a) pelo feedback!</string>
    <string name="txt_deleteAnswer">Deseja deletar sua resposta?</string>
    <string name="txt_hintDelete">Você não poderá mais recuperá-la após realizar essa ação.</string>
    <string name="txt_no_topic_create">Você ainda não criou nenhum tópico</string>


</resources>