<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/container_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/header_small"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/logo_medium" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/style_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/title_sign_up" />


            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="#CA2222"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_name"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="#CA2222"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_lastName"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person"
                    android:hint="@string/hint_lastName"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--             Birth Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_birthdate"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:focusable="false"
                    android:hint="@string/hint_birthdate"
                    android:inputType="date"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="#CA2222"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_email"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPasword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="#CA2222"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_password"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutConfirmPasword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="#CA2222"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ipt_confirmPassword"
                    style="@style/style_ipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txt_link_sign_up"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/linkText"
                    style="@style/style_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/txt_link" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cadastro"
                    style="@style/style_btnYellowLarger"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/db_btn_solid"
                    android:text="@string/txt_signUp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_backToLogin"
                    style="@style/style_btnBorderBlackLarger"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/db_btn_border"
                    android:text="@string/txt_back_login" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/loadingView"
        layout="@layout/fragment_progress_bar"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>