<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.Likert">

    <RelativeLayout
        android:id="@+id/container_likert"
        android:layout_width="260dp"
        android:layout_height="89dp"
        android:background="@drawable/db_card_likert"
        android:elevation="4dp"
        android:paddingStart="20dp"
        android:paddingTop="3dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">


        <TextView
            android:id="@+id/txt_aula"
            style="@style/style_textXXSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/txt_title_likert"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ln_emoticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_aula"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_notlike"
                android:layout_width="25dp"
                android:layout_height="33dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:src="@mipmap/notlike" />

            <ImageView
                android:id="@+id/img_improve"
                android:layout_width="25dp"
                android:layout_height="33dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@mipmap/improve" />

            <ImageView
                android:id="@+id/img_doubt"
                android:layout_width="25dp"
                android:layout_height="33dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@mipmap/doubt" />

            <ImageView
                android:id="@+id/img_liked"
                android:layout_width="25dp"
                android:layout_height="33dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@mipmap/liked" />

            <ImageView
                android:id="@+id/img_love"
                android:layout_width="25dp"
                android:layout_height="33dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:src="@mipmap/loved" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln_emoticon"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_notlike"
                style="@style/style_textXXSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:text="@string/txt_notlike"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_improve"
                style="@style/style_textXXSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/txt_improve"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_doubt"
                style="@style/style_textXXSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_doubt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_like"
                style="@style/style_textXXSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txt_liked"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_loved"
                style="@style/style_textXXSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_weight="1"
                android:text="@string/txt_loved"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/txt_ty"
            android:textColor="@color/purple800"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/txt_feedback"/>
    </RelativeLayout>

</FrameLayout>